<resources>
    <string name="app_name">Baccus</string>
    <string name="reload">Reload</string>
    <string name="choose_an_option">Elige una opción</string>
    <string name="fit_radio">Ajustada</string>
    <string name="center_radio">Centrada</string>
    <string name="cancel_button">Cancelar</string>
    <string name="save_button">Guardar</string>
    <string name="settings">Ajustes</string>
    <string name="title_activity_winery">WineryActivity</string>
    <string name="next">Siguiente</string>
    <string name="previous">Anterior</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="loading">Cargando ...</string>
    <string name="red">Tinto</string>
    <string name="white">Blanco</string>
    <string name="rose">Rosado</string>
    <string name="other">Otro</string>
    <string name="goToWeb">Ir a la web del vino</string>
</resources>
