<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tvChooseOptionText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/choose_an_option" />

    <RadioGroup
        android:id="@+id/rgScaleType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/tvChooseOptionText">

        <RadioButton
            android:id="@+id/rbFitScale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fit_radio" />

        <RadioButton
            android:id="@+id/rbCenterScale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/center_radio" />

    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cancel_button"
            android:onClick="cancelConfiguration"
            android:layout_weight="1" />

        <Button
            android:id="@+id/btnSave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save_button"
            android:onClick="saveConfiguration"
            android:layout_weight="1" />

    </LinearLayout>

</RelativeLayout>